--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "Leandro Ostera <me@leostera.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel": "^4.7.8",
+    "browserify": "^9.0.3",
+    "jade": "^1.9.2",
     "partialify": "^3.1.3"
   },
   "dependencies": {
+    "ampersand-model": "^4.1.0",
+    "react": "^0.13.0",
     "routes": "git://github.com/aaronblohowiak/routes.js",
     "superagent": "^0.21.0",
     "vue": "git://github.com/yyx990803/vue"
