--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "react-ing",
+  "name": "react-test",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ostera/react-ing.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ostera/react-ing/issues"
-  },
-  "homepage": "https://github.com/ostera/react-ing#readme",
+  "main": "src/app.js",
   "dependencies": {
-    "babel": "^5.8.21",
-    "browserify": "^11.0.1",
-    "gulp": "^3.9.0",
+    "flux": "^2.0.3",
     "react": "^0.13.3"
+  },
+  "devDependencies": {
+    "babelify": "^6.1.3",
+    "browserify": "^6.2.0",
+    "envify": "^3.0.0",
+    "jest-cli": "^0.4.19",
+    "reactify": "^0.15.2",
+    "uglify-js": "~2.4.15",
+    "watchify": "^2.1.1"
+  },
+  "scripts": {
+    "start": "watchify -o build/bundle.js -v -d src/app.js",
+    "build": "browserify . -t [envify --NODE_ENV production] | uglifyjs -cm > build/bundle.min.js",
+    "test": "jest"
+  },
+  "browserify": {
+    "transform": [
+      "babelify",
+      "reactify",
+      "envify"
+    ]
+  },
+  "jest": {
+    "rootDir": "./src"
   }
 }
