Event creation and dispatching working!

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/app.js",
   "dependencies": {
     "flux": "^2.0.3",
+    "object-assign": "^3.0.0",
     "react": "^0.13.3"
   },
   "devDependencies": {
